--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,23 +19,24 @@
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/login/oauth/authorize?client_id=f6d803ab4899d0fab50a&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        我的账号
+                <li class="nav-item dropdown" th:if="${session.githubUser != null}">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false" th:text="${session.githubUser.getName()}">
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#">消息</a></li>
                         <li><a class="dropdown-item" href="#">个人资料</a></li>
                     </ul>
                 </li>
+                <li class="nav-item" th:unless="${session.githubUser != null}">
+                    <a class="nav-link"
+                       href="https://github.com/login/oauth/authorize?client_id=f6d803ab4899d0fab50a&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
+                </li>
+
             </ul>
 
         </div>
     </div>
 </nav>
-<p th:text="${name}"></p>
 </body>
 </html>
