--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -17,7 +17,7 @@
         <div class="col-xl-9 ">
             <h2><i class="bi bi-pencil-square"></i> 发布问题</h2>
             <hr>
-            <form action="">
+            <form action="/publish" method="post">
                 <div class="mb-3">
                     <label for="title" class="form-label">标题</label>
                     <input type="text" class="form-control" id="title" name="title" placeholder="在这里输入标题 ...">
@@ -30,7 +30,7 @@
                     <label for="tag" class="form-label">标签</label>
                     <input type="text" class="form-control" id="tag" name="tag" placeholder="在这里输入标签，用 ',' 隔开">
                 </div>
-                <button type="button" class="btn btn-success" style="float: right">提交</button>
+                <button type="submit" class="btn btn-success" style="float: right">提交</button>
             </form>
         </div>
         <div class="col-xl-3 ">
