--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -20,15 +20,20 @@
             <form action="/publish" method="post">
                 <div class="mb-3">
                     <label for="title" class="form-label">标题</label>
-                    <input type="text" class="form-control" id="title" name="title" placeholder="在这里输入标题 ...">
+                    <input type="text" class="form-control" id="title" name="title" th:value="${title}"
+                           placeholder="在这里输入标题 ...">
                 </div>
                 <div class="mb-3">
                     <label for="title" class="form-label">内容</label>
-                    <textarea class="form-control" id="description" name="description" rows="5"></textarea>
+                    <textarea class="form-control" id="description" name="description" rows="5"
+                              th:text="${description}"></textarea>
                 </div>
                 <div class="mb-3">
                     <label for="tag" class="form-label">标签</label>
-                    <input type="text" class="form-control" id="tag" name="tag" placeholder="在这里输入标签，用 ',' 隔开">
+                    <input type="text" class="form-control" id="tag" name="tag" th:value="${tag}"
+                           placeholder="在这里输入标签，用 ',' 隔开">
+                </div>
+                <div class="alert alert-warning" role="alert" th:text="${error}" th:if="${error != null}">
                 </div>
                 <button type="submit" class="btn btn-success" style="float: right">提交</button>
             </form>
