--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,13 +11,13 @@
         <div class="col-xl-9 ">
             <h2><i class="bi bi-pencil-square"></i> 发布问题</h2>
             <hr>
-            <div class="d-flex" th:each="question : ${questions}">
+            <div class="d-flex" th:each="question : ${pagination.question}" style="border-bottom: 1px solid grey">
                 <div class="flex-shrink-0">
                     <img th:src="${question.user.avatarUrl}" height="50" width="50">
                 </div>
                 <div class="flex-grow-1 ms-3">
                     <h5 th:text="${question.title}">标题</h5>
-                    <span class="text-desc">[[${question.user.name}]]  [[${question.commentCount}]]回复 [[${question.viewCount}]]浏览 [[${question.likeCount}]]点赞 [[${#dates.format(question.gmtCreate, 'dd/MMM/yyyy HH:mm')}]]</span>
+                    <span class="text-desc">[[${question.user.name}]] ∙ [[${question.commentCount}]]回复 ∙ [[${question.viewCount}]]浏览 ∙ [[${question.likeCount}]]点赞 ∙ [[${#dates.format(question.gmtCreate, 'yyyy-MM-dd HH:mm')}]]</span>
                 </div>
             </div>
 
@@ -25,6 +25,36 @@
         <div class="col-xl-3 ">
             <h3>热门</h3>
         </div>
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item" th:if="${pagination.showFirstPage == true}">
+                    <a class="page-link" href="/?page=1" aria-label="First">
+                        <span aria-hidden="true">首页</span>
+                    </a>
+                </li>
+                <li class="page-item" th:if="${pagination.showPrevious == true}">
+                    <a class="page-link" href="#" th:href="@{/(page = ${pagination.currentPage - 1})}"
+                       aria-label="Previous">
+                        <span aria-hidden="true">上一页</span>
+                    </a>
+                </li>
+                <li class="page-item" th:class="${pagination.currentPage == page} ? 'page-item active' : 'page-item'"
+                    th:each="page : ${pagination.pages}">
+                    <a class="page-link" href="#" th:href="@{/(page = ${page})}">[[${page}]]</a>
+                </li>
+                <li class="page-item" th:if="${pagination.showNext == true}">
+                    <a class="page-link" href="#" th:href="@{/(page = ${pagination.currentPage + 1})}"
+                       aria-label="Next">
+                        <span aria-hidden="true">下一页</span>
+                    </a>
+                </li>
+                <li class="page-item" th:if="${pagination.showLastPage == true}">
+                    <a class="page-link" href="#" aria-label="Last">
+                        <span aria-hidden="true">末页</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </div>
 </div>
 </body>
