个人中心页面，我的问题

--- a/src/main/resources/static/css/forum.css
+++ b/src/main/resources/static/css/forum.css
@@ -2,4 +2,22 @@
     font-size: 12px;
     font-weight: normal;
     color: #999;
+    margin-top: 10px;
+}
+
+.d-flex {
+    padding: 10px;
+}
+
+.pagination {
+    padding: 10px;
+}
+
+.navbar {
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
+}
+
+.section {
+    margin-top: 55px;
 }
