--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="zh-CN">
+<html xmlns:th="http://www.thymeleaf.org" lang="zh-CN" th:fragment="th">
 <head th:fragment="head">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -32,8 +32,8 @@
                        data-bs-toggle="dropdown" aria-expanded="false" th:text="${session.githubUser.getName()}">
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">消息</a></li>
-                        <li><a class="dropdown-item" href="#">个人资料</a></li>
+                        <li><a class="dropdown-item" href="/profile">个人中心</a></li>
+                        <li><a class="dropdown-item" href="/">退出登录</a></li>
                     </ul>
                 </li>
                 <li class="nav-item" th:unless="${session.githubUser != null}">
