--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -32,7 +32,7 @@
                        data-bs-toggle="dropdown" aria-expanded="false" th:text="${session.githubUser.getName()}">
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="/profile">个人中心</a></li>
+                        <li><a class="dropdown-item" href="/profile/questions">个人中心</a></li>
                         <li><a class="dropdown-item" href="/">退出登录</a></li>
                     </ul>
                 </li>
