--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -19,7 +19,8 @@
                 [[${question.description}]]
             </div>
             <hr>
-            <a th:href="@{'/publish/' + ${question.id}}"> <i class="bi bi-pencil"></i>修改</a>
+            <a th:if="${session.githubUser != null && session.githubUser.id == question.creator}"
+               th:href="@{'/publish/' + ${question.id}}"> <i class="bi bi-pencil"></i>修改</a>
         </div>
         <div class="col-xl-3 ">
             <div class="col-xl-12 ">
