完成退出登录功能

--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -33,7 +33,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="/profile/questions">个人中心</a></li>
-                        <li><a class="dropdown-item" href="/">退出登录</a></li>
+                        <li><a class="dropdown-item" href="/logout">退出登录</a></li>
                     </ul>
                 </li>
                 <li class="nav-item" th:unless="${session.githubUser != null}">
