change redirectUrl to 192.168

--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -38,7 +38,7 @@
                 </li>
                 <li class="nav-item" th:unless="${session.githubUser != null}">
                     <a class="nav-link"
-                       href="https://github.com/login/oauth/authorize?client_id=f6d803ab4899d0fab50a&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
+                       href="https://github.com/login/oauth/authorize?client_id=f6d803ab4899d0fab50a&redirect_uri=http://192.168.0.115:8080/callback&scope=user&state=1">登录</a>
                 </li>
 
             </ul>
