--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -9,6 +9,8 @@
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/forum.css">
+    <script src="/js/jquery-3.6.0.min.js"></script>
+    <script src="/js/forum.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="navbar">
