--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -13,18 +13,18 @@
     <script src="/js/forum.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="navbar">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-12" th:fragment="navbar">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">简陋就是特色</a>
+        <a class="navbar-brand" href="/">🙌</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <form class="d-flex" style="white-space:nowrap">
-                <input class="form-control me-2" type="search" placeholder="输入搜索内容" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">搜索</button>
-            </form>
+            <!--            <form class="d-flex" style="white-space:nowrap">-->
+            <!--                <input class="form-control me-2" type="search" placeholder="输入搜索内容" aria-label="Search">-->
+            <!--                <button class="btn btn-outline-success" type="submit">搜索</button>-->
+            <!--            </form>-->
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link" href="/publish">发布</a>
