--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -40,20 +40,21 @@
                     <!--                   二级回复开始-->
                     <div class="in collapse show" th:id="'collapse' + ${comment.id}">
                         <div class="card card-body">
-                            <div class="d-flex" th:each="comment : ${comments}"
+                            <div class="d-flex" th:each="subComment : ${subComments}"
+                                 th:if="${comment.id == subComment.parentId}"
                                  style="border-bottom: 1px solid #e2e2e2">
                                 <div class="flex-shrink-0">
-                                    <img th:src="${comment.user.avatarUrl}" height="55" width="55">
+                                    <img th:src="${subComment.user.avatarUrl}" height="55" width="55">
                                 </div>
                                 <div class="flex-grow-1 ms-3">
-                                    <span th:text="${comment.user.name}"></span>
-                                    <span class="text-desc">[[${#dates.format(comment.gmtCreat, 'yyyy-MM-dd HH:mm')}]]</span>
-                                    <p th:text="${comment.content}"></p>
+                                    <span th:text="${subComment.user.name}"></span>
+                                    <span class="text-desc">[[${#dates.format(subComment.gmtCreat, 'yyyy-MM-dd HH:mm')}]]</span>
+                                    <p th:text="${subComment.content}"></p>
                                     <a href="">赞</a>
                                     <p>
                                         <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
-                                                th:data-bs-target="'#collapse' + ${comment.id}" aria-expanded="false"
-                                                th:aria-controls="'collapse' + ${comment.id}">
+                                                th:data-bs-target="'#collapse' + ${subComment.id}" aria-expanded="false"
+                                                th:aria-controls="'collapse' + ${subComment.id}">
                                             回复
                                         </button>
                                     </p>
