--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -18,6 +18,9 @@
             <div class="col-xl-12 ">
                 [[${question.description}]]
             </div>
+            <span class="badge bg-info text-dark" th:each="tag : ${question.tag.split(',')}"
+                  th:text="${tag}">Info</span>
+            <br>
             <a th:if="${session.githubUser != null && session.githubUser.id == question.creator}"
                th:href="@{'/publish/' + ${question.id}}"> <i class="bi bi-pencil"></i>修改</a>
             <hr>
