--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -27,6 +27,10 @@
             <!--            </form>-->
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
+                    <a class="nav-link" href="/profile/replies">消息<span class="badge bg-primary rounded-pill"
+                                                                        th:text="${unreadCount}">2</span></a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/publish">发布</a>
                 </li>
                 <li class="nav-item dropdown" th:if="${session.githubUser != null}">
