--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,8 +9,6 @@
 <div class="container mt-3">
     <div class="row">
         <div class="col-xl-9 ">
-            <h2><i class="bi bi-pencil-square"></i> 发布问题</h2>
-            <hr>
             <div class="d-flex" th:each="question : ${pagination.getData}" style="border-bottom: 1px solid #e2e2e2">
                 <div class="flex-shrink-0">
                     <img th:src="${question.user.avatarUrl}" height="55" width="55">
@@ -24,7 +22,7 @@
             </div>
         </div>
         <div class="col-xl-3 ">
-            <h3>热门</h3>
+            <h3>公告栏</h3>
         </div>
         <nav aria-label="Page navigation example">
             <ul class="pagination">
