--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -66,7 +66,9 @@
                     <a th:href="@{'/notification/'} + ${notification.id}" th:text="${notification.outerTitle}"></a>
                     <span class="text-desc"
                           th:text="${#dates.format(notification.gmtCreate, 'yyyy-MM-dd HH:mm')}"></span>
-                    <span th:if="${notification.getStatus() == 0}">未读</span>
+                    <div class="spinner-grow spinner-grow-sm" role="status" th:if="${notification.getStatus() == 0}">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
                 </div>
                 <nav aria-label="Page navigation example">
                     <ul class="pagination">
