--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -116,7 +116,7 @@
                 <a href="/profile/replies" class="list-group-item list-group-item-action"
                    th:class="${section == 'replies'} ? 'list-group-item list-group-item-action active' : 'list-group-item list-group-item-action'">
                     我收到的回复
-                    <span class="badge bg-primary rounded-pill" th:text="${unreadCount}">2</span>
+                    <span class="badge bg-primary rounded-pill" th:text="${session.unreadCount}">2</span>
                 </a>
             </div>
         </div>
