--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -48,14 +48,16 @@
                     <span th:text="${comment.user.name}"></span>
                     <span class="text-desc">[[${#dates.format(comment.gmtCreat, 'yyyy-MM-dd HH:mm')}]]</span>
                     <div class="content" th:text="${comment.content}"></div>
-                    <a href="">赞</a>
-                    <p>
-                        <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
-                                th:data-bs-target="'#collapse' + ${comment.id}" aria-expanded="false"
-                                th:aria-controls="'collapse' + ${comment.id}">
-                            回复
-                        </button>
-                    </p>
+                    <a class="btn btn-primary btn-sm" href="">
+                        <i class="bi bi-heart-fill"></i>
+                        12
+                    </a>
+                    <button class="btn btn-primary btn-sm" type="button" data-bs-toggle="collapse"
+                            th:data-bs-target="'#collapse' + ${comment.id}" aria-expanded="false"
+                            th:aria-controls="'collapse' + ${comment.id}">
+                        <i class="bi bi-chat-left-fill"></i>
+
+                    </button>
                     <!--                   二级回复开始-->
                     <div class="in collapse show" th:id="'collapse' + ${comment.id}">
                         <div class="card card-body">
@@ -69,7 +71,10 @@
                                     <span th:text="${subComment.user.name}"></span>
                                     <span class="text-desc">[[${#dates.format(subComment.gmtCreat, 'yyyy-MM-dd HH:mm')}]]</span>
                                     <div class="content" th:text="${subComment.content}"></div>
-                                    <a href="">赞</a>
+                                    <a class="btn btn-primary btn-sm" href="">
+                                        <i class="bi bi-heart-fill"></i>
+                                        12
+                                    </a>
 <!--                                    <p>-->
 <!--                                        <button class="btn btn-primary" type="button" data-bs-toggle="collapse"-->
 <!--                                                th:data-bs-target="'#collapse' + ${subComment.id}" aria-expanded="false"-->
@@ -84,7 +89,7 @@
                                 <label for="comment_content" class="form-label">回复</label>
                                 <textarea class="form-control" th:id="'content' + ${comment.id}" rows="3"></textarea>
                             </div>
-                            <button type="button" class="btn btn-success" th:onclick="'subPost(' + ${comment.id} + ')'">
+                            <button type="button" style="width: 58px" class="btn btn-primary" th:onclick="'subPost(' + ${comment.id} + ')'" >
                                 提交
                             </button>
                         </div>
@@ -96,7 +101,7 @@
                 <label for="comment_content" class="form-label">回复</label>
                 <textarea class="form-control" id="comment_content" rows="3"></textarea>
             </div>
-            <button type="button" class="btn btn-success" onclick="post()">提交</button>
+            <button type="button" class="btn btn-primary" onclick="post()">提交</button>
         </div>
         <div class="col-xl-3 ">
             <div class="col-xl-12 ">
