--- a/src/main/resources/static/css/forum.css
+++ b/src/main/resources/static/css/forum.css
@@ -38,4 +38,15 @@ a:hover {
 
 .content {
     white-space: pre-wrap;
+    margin-block: 7px;
+}
+
+.btn {
+    margin-block: 5px;
+
+}
+
+
+.card {
+    background-color: ghostwhite;
 }
